Changing hero image on smaller devices, fixed subscribe sections, tablet responsiveness

--- a/src/components/Footer.sass
+++ b/src/components/Footer.sass
@@ -115,6 +115,7 @@ footer
     .row
       +mobile 
         display: block
+        max-width: unset
 
   .logo-box
     .row
