--- a/src/components/TokenBox.sass
+++ b/src/components/TokenBox.sass
@@ -26,7 +26,7 @@
     width: 90%
 
   +mobile
-    padding: 34px 15px
+    padding: 40px
 
 
   .token-box-title
