--- a/src/pages/community.sass
+++ b/src/pages/community.sass
@@ -69,6 +69,7 @@
 
 
   .subscribe-section
+    background-color: #1E1A31
     color: #FFFFFF
     font-size: 36px
     font-weight: 500
@@ -100,7 +101,7 @@
 
   @media (max-width: 1087px)
     .main-content 
-      padding: 100px
+      padding: 64px
 
   @media (max-width: 768px)
 
@@ -110,3 +111,21 @@
 
       h1 
         transform: unset
+
+    .subscribe-section
+      .sub-inputs
+        display: block
+
+        .input-field
+          margin: auto
+          width: 80vw
+        
+        .input-button 
+          width: 80vw
+          margin: auto
+
+          .subscribe-button
+            width: 100%
+            margin-top: 24px
+
+        
